src/logs/unified-inference-5129811.err
NOTE: This module uses Singularity. Some commands execute inside the container
(e.g. python3, pip3).

  File "/scratch/project_2010376/JDs_Project/AML_Persister_Analysis/src/unified_inference.py", line 1
    <insert the Python code from above>
    ^
SyntaxError: invalid syntax
srun: error: g4201: task 0: Exited with exit code 1
srun: Terminating StepId=5129811.0
